--- a/index.html
+++ b/index.html
@@ -325,7 +325,11 @@
         </div>
       </div>
       <div class="container mt-5">
-        <h2 class="main-title mb-5">КОНТЕНТ</h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <h2 class="main-title main-title__big mb-5">КОНТЕНТ</h2>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-10">
             <p>
@@ -341,9 +345,120 @@
           </div>
           <div class="col-12 mt-5 d-flex justify-content-center">
             <div class="about-service__instagram-content">
-              <img src="img/images/instagram-content.jpg" alt="Изображения">
+              <img src="img/images/legal-instagram.jpg" alt="Изображения">
             </div>
           </div>
+        </div>
+      </div>
+      <div class="container slider">
+        <!-- Swiper -->
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                    <h3 class="slider__title">О контенте детальнее </h3>
+                    <p class="slider__text">Контент-стратегия включала в себя следующие рубрики:
+                      - Чек-листы по различным жизненным ситуациям, попадая в которые пользователь обычно паникует и
+                      чувствует себя
+                      неуверенно:</p>
+                  </div>
+                  <div class="col-lg-6 d-flex justify-content-center">
+                    <div class="slider__image">
+                      <img src="img/slider/1.jpg" alt="Изображения">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                    <h3 class="slider__title">О контенте детальнее </h3>
+                    <p class="slider__text">Контент-стратегия включала в себя следующие рубрики:
+                      - Чек-листы по различным жизненным ситуациям, попадая в которые пользователь обычно паникует и
+                      чувствует себя
+                      неуверенно:</p>
+                  </div>
+                  <div class="col-lg-6 d-flex justify-content-center">
+                    <div class="slider__image">
+                      <img src="img/slider/1.jpg" alt="Изображения">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                    <h3 class="slider__title">Второй Слайдер</h3>
+                    <p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem neque
+                      sunt ea autem quia hic unde vitae cumque vel.</p>
+                  </div>
+                  <div class="col-lg-6 d-flex justify-content-center">
+                    <div class="slider__image">
+                      <img src="img/slider/1.jpg" alt="Изображения">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row my-4">
+          <div class="col-lg-6">
+            <!-- Add Pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+          <div class="col-lg-6">
+            <div class="slider__controls">
+              <!-- Add Arrows -->
+              <div class="swiper-button-prev"></div>
+              <div class="slider__controls_text">Листай</div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container mt-5 about-service__instagram-posts">
+        <div class="row">
+          <div class="col-lg-4">
+            <h2 class="main-title main-title__big">посты</h2>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-lg-4 mt-4">
+            <div class="about-service__instagram-posts_item">
+              <img src="img/gallery/legal-instagram/1.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 mt-4">
+            <div class="about-service__instagram-posts_item">
+              <img src="img/gallery/legal-instagram/1.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 mt-4">
+            <div class="about-service__instagram-posts_item">
+              <img src="img/gallery/legal-instagram/1.jpg" alt="Изображения">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container mt-5">
+        <div class="row mb-5">
+          <div class="col-lg-4">
+            <h2 class="main-title main-title__big">СООБЩЕСТВА</h2>
+          </div>
+        </div>
+        <p>Мы выбрали Instagram и Фейсбук как основную площадку для продвижения
+          и Вконтакте как дополнительную соц сеть, работающую на лояльность к бренду клиента.
+        </p>
+        <p>Каждый город начинается с известных лиц - команды экспертов юридического центра.</p>
+        <div class="image">
+          <img src="img/images/workers.jpg" alt="Изображения">
         </div>
       </div>
     </section>
