--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section class="container-fluid about-service">
       <div class="container about-service__spacing">
         <div class="row">
-          <div class="col-lg-10">
+          <div class="col-lg-10 d-flex flex-column justify-content-center">
             <p>Галерея юридических услуг - это современная полносервисная компания, которая может предоставить
               практически
               весь спектр
@@ -111,7 +111,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid px-5 about-service__gallery">
+      <div class="container-fluid about-service__spacing px-5 about-service__gallery">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-2">
             <div class="about-service__gallery_item">
@@ -158,7 +158,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid px-5">
+      <div class="container-fluid about-service__spacing px-5">
         <div class="about-service__block-bg">
           <div class="about-service__block-bg_text">
             <p>Во время исследования онлайн-сектора юридических услуг
@@ -180,7 +180,7 @@
               авизованный”
             </p>
           </div>
-          <div class="col-lg-5 offset-2">
+          <div class="col-lg-5 offset-1">
             <h2 class="main-title mb-5">Инфлюенсеры</h2>
             <p>
               Лидеры мнений, которые работают над своим личным брендом. Они не имеют широкую матрицу услуг, но стараются
@@ -193,8 +193,8 @@
       <div class="container-fluid about-service__office-img">
         <img src="img/images/legal-office.jpg" alt="Изображения">
       </div>
-      <div class="container about-service__spacing pb-5">
-        <p>Проводя тестирование контента на фокус-группе, мы получили общее впечатление
+      <div class="container about-service__spacing about-service__line-height pb-5">
+        <p class="mb-5">Проводя тестирование контента на фокус-группе, мы получили общее впечатление
           по существующему контенту: компании стараются выразить экспертность
           и принадлежность к государственным структурам, а их образы перегруженные и сложные. Контент отдален от
           потребителя,
@@ -204,7 +204,7 @@
         <p class="color-red font-bold">В разработке концепции мы учли эти факторы и отстроились от остальных компаний в
           сторону понятного, дружелюбного образа.</p>
       </div>
-      <div class="container-fluid px-5 pb-5 about-service__icon-section">
+      <div class="container-fluid about-service__spacing px-5 pt-0 about-service__icon-section">
         <div class="row">
           <div class="col-lg-4">
             <div class="card-bordered">
@@ -223,7 +223,7 @@
           </div>
         </div>
       </div>
-      <div class="container mt-5">
+      <div class="container about-service__spacing about-service__line-height">
         <div class="row">
           <div class="col-lg-11">
             <h2 class="about-service__title-icon mb-4">
@@ -240,7 +240,7 @@
               понятном
               пользователю языке.</p>
 
-            <h2 class="about-service__title-icon mt-5 mb-4">
+            <h2 class="about-service__title-icon mt-5 pt-5 mb-4">
               <span class="i-legal-face icon"></span>
               <span class="about-service__title-icon_text">Креативная концепция:</span>
             </h2>
@@ -252,7 +252,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid about-service__opportunities px-0 mt-5 bg-blue">
+      <div class="container-fluid about-service__spacing about-service__opportunities px-0 bg-blue">
         <div class="container">
           <div class="row">
             <div class="col-lg-9 mb-5">
@@ -290,22 +290,22 @@
           </div>
         </div>
       </div>
-      <div class="container mt-5">
+      <div class="container about-service__spacing about-service__fz-32">
         <div class="row">
           <div class="col-lg-6 mt-4">
             <div class="about-service__gallery_item"><a data-fancybox="gallery" href="img/gallery/legal/4.jpg"><img
                   src="img/gallery/legal/4.jpg"></a></div>
           </div>
           <div class="col-lg-6 mt-4">
-            <div class="about-service__gallery_item"><a data-fancybox="gallery" href="img/gallery/legal/4.jpg"><img
-                  src="img/gallery/legal/4.jpg"></a></div>
+            <div class="about-service__gallery_item"><a data-fancybox="gallery" href="img/gallery/legal/5.jpg"><img
+                  src="img/gallery/legal/5.jpg"></a></div>
           </div>
           <div class="col-lg-9 mb-5 mt-5">
             <p>Сегодня в России 20 кодексов, каждый из которых регулярно обновляется. Законы ждут граждан на каждом
               углу, парковке,
               станции метро и автобусной остановке. Эта мысль побудила нас создать яркую креативную концепцию.
             </p>
-            <h3>Юрисдикция - Город Юристов</h3>
+            <h3 class="mt-5">Юрисдикция - Город Юристов</h3>
           </div>
           <div class="col-lg-4 mt-4">
             <div class="image-with-shadow">
@@ -324,14 +324,14 @@
           </div>
         </div>
       </div>
-      <div class="container mt-5">
+      <div class="container about-service__spacing">
         <div class="row">
           <div class="col-lg-4">
             <h2 class="main-title main-title__big mb-5">КОНТЕНТ</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-10">
+          <div class="col-lg-11">
             <p>
               Абсолютный, не заезженный тренд этого года - изометрические иллюстрации, концепт который помог интересно и
               стильно
@@ -343,21 +343,21 @@
               давало единый стиль.
             </p>
           </div>
-          <div class="col-12 mt-5 d-flex justify-content-center">
+          <div class="col-12 mt-5 pt-2 d-flex justify-content-center">
             <div class="about-service__instagram-content">
               <img src="img/images/legal-instagram.jpg" alt="Изображения">
             </div>
           </div>
         </div>
       </div>
-      <div class="container slider slider-first">
+      <div class="container about-service__spacing slider slider-first">
         <!-- Swiper -->
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
 
               <div class="row">
-                <div class="col-lg-6 d-flex justify-content-center flex-column">
+                <div class="col-lg-5 d-flex justify-content-center flex-column">
                   <h3 class="slider__title">О контенте детальнее </h3>
                   <p class="slider__text">Контент-стратегия включала в себя следующие рубрики:
                     - Чек-листы по различным жизненным ситуациям, попадая в которые пользователь обычно паникует и
@@ -375,7 +375,7 @@
             <div class="swiper-slide">
 
               <div class="row">
-                <div class="col-lg-6 d-flex justify-content-center flex-column">
+                <div class="col-lg-5 d-flex justify-content-center flex-column">
                   <h3 class="slider__title">Второй Слайдер</h3>
                   <p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem neque
                     sunt ea autem quia hic unde vitae cumque vel.</p>
@@ -391,12 +391,12 @@
           </div>
         </div>
 
-        <div class="row py-4">
+        <div class="row pt-5">
           <div class="col-lg-6 d-flex align-items-center">
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="slider__controls">
               <!-- Add Arrows -->
               <div class="swiper-button-prev"></div>
@@ -408,7 +408,7 @@
 
 
       </div>
-      <div class="container mt-5 about-service__instagram-posts">
+      <div class="container about-service__spacing about-service__instagram-posts">
         <div class="row">
           <div class="col-lg-4">
             <h2 class="main-title main-title__big">посты</h2>
@@ -432,14 +432,14 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid px-0 py-5 mt-5 bg-grey">
-        <div class="container slider slider-second slider-blue slider-small-image">
+      <div class="container-fluid about-service__spacing px-0 mt-5 bg-grey">
+        <div class="container slider py-4 slider-second slider-blue slider-small-image">
           <!-- Swiper -->
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5">
                     <h3 class="slider__title">игры для <br> сторис</h3>
                     <h4 class="slider__subtitle">Игровые механики!</h4>
                     <p class="slider__text">В качестве вовлечения в новую публикацию использовались тесты, квизы, игры
@@ -454,7 +454,7 @@
               </div>
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5 d-flex justify-content-center flex-column">
                     <h3 class="slider__title">Второй Слайдер</h3>
                     <p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem neque
                       sunt ea autem quia hic unde vitae cumque vel.</p>
@@ -469,8 +469,8 @@
             </div>
           </div>
 
-          <div class="row py-4">
-            <div class="col-lg-6">
+          <div class="row pt-5">
+            <div class="col-lg-5">
               <!-- Add Pagination -->
               <div class="swiper-pagination"></div>
             </div>
@@ -486,15 +486,15 @@
 
         </div>
       </div>
-      <div class="container-fluid px-0 py-5 mt-5">
-        <div class="container slider slider-third slider-blue slider-small-image">
+      <div class="container-fluid about-service__spacing px-0">
+        <div class="container slider py-4 slider-third slider-blue slider-small-image">
           <!-- Swiper -->
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
 
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5 d-flex justify-content-center flex-column">
                     <h4 class="slider__subtitle">Игровые механики!</h4>
                     <p class="slider__text">В качестве вовлечения в новую публикацию использовались тесты, квизы, игры
                       на внимательность в формате споров, детективов и историй из жизни.</p>
@@ -510,7 +510,7 @@
               <div class="swiper-slide">
 
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5 d-flex justify-content-center flex-column">
 
                     <p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem neque
                       sunt ea autem quia hic unde vitae cumque vel.</p>
@@ -526,8 +526,8 @@
             </div>
           </div>
 
-          <div class="row py-4">
-            <div class="col-lg-6 d-flex align-items-center">
+          <div class="row pt-5">
+            <div class="col-lg-5 d-flex align-items-center">
               <!-- Add Pagination -->
               <div class="swiper-pagination"></div>
             </div>
@@ -543,7 +543,7 @@
 
         </div>
       </div>
-      <div class="container mt-5">
+      <div class="container about-service__spacing">
         <div class="row mb-5">
           <div class="col-lg-4">
             <h2 class="main-title main-title__big">СООБЩЕСТВА</h2>
@@ -553,14 +553,14 @@
           и Вконтакте как дополнительную соц сеть, работающую на лояльность к бренду клиента.
         </p>
         <p>Каждый город начинается с известных лиц - команды экспертов юридического центра.</p>
-        <div class="about-service__workers mb-5">
+        <div class="about-service__workers">
           <img src="img/images/workers.jpg" alt="Изображения">
         </div>
         <p>Отдельную рубрику занимали истории клиентов компании, чтобы каждый пользователь мог убедиться, что обратиться
           в Галерею
           Юридических Услуг можно по абсолютно любому поводу.</p>
       </div>
-      <div class="container-fluid px-0 mt-5 bg-blue">
+      <div class="container-fluid about-service__spacing px-0 bg-blue">
         <div class="container slider slider-small-image slider-white slider-fourth">
           <!-- Swiper -->
           <div class="swiper-container">
@@ -568,7 +568,7 @@
               <div class="swiper-slide">
 
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5">
                     <h3 class="slider__title">Инструменты <br> вовлечения:</h3>
                     <h4 class="slider__subtitle">Игровые механики!</h4>
                     <p class="slider__text">В качестве вовлечения в новую публикацию использовались тесты, квизы, игры
@@ -585,7 +585,7 @@
               <div class="swiper-slide">
 
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5">
                     <h3 class="slider__title">Инструменты <br> вовлечения:</h3>
                     <h4 class="slider__subtitle">Игровые механики!</h4>
                     <p class="slider__text">В качестве вовлечения в новую публикацию использовались тесты, квизы, игры
@@ -601,8 +601,8 @@
               </div>
             </div>
           </div>
-          <div class="row py-4">
-            <div class="col-lg-6 col-lg-6 d-flex align-items-center">
+          <div class="row pt-5">
+            <div class="col-lg-5 d-flex align-items-center">
               <!-- Add Pagination -->
               <div class="swiper-pagination"></div>
             </div>
@@ -617,14 +617,14 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid px-0 py-5 bg-grey">
+      <div class="container-fluid about-service__spacing px-0 bg-grey">
         <div class="container slider slider-fifth slider-small-image">
           <!-- Swiper -->
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5 d-flex justify-content-center flex-column">
                     <p class="slider__text font-bold">В этой игровой механике пользователь вставал перед выбором, какое
                       юридическое лицо ему оформлять или в какой суд
                       обращаться.</p>
@@ -638,7 +638,7 @@
               </div>
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-lg-6 d-flex justify-content-center flex-column">
+                  <div class="col-lg-5 d-flex justify-content-center flex-column">
                     <p class="slider__text font-bold">В этой игровой механике пользователь вставал перед выбором, какое
                       юридическое лицо ему оформлять или в какой суд
                       обращаться.</p>
@@ -653,8 +653,8 @@
             </div>
           </div>
 
-          <div class="row py-4">
-            <div class="col-lg-6 d-flex align-items-center">
+          <div class="row pt-5">
+            <div class="col-lg-5 d-flex align-items-center">
               <!-- Add Pagination -->
               <div class="swiper-pagination"></div>
             </div>
@@ -670,7 +670,7 @@
 
         </div>
       </div>
-      <div class="container numbers-section py-5">
+      <div class="container about-service__spacing numbers-section">
         <div class="row">
           <div class="col-lg-4 mb-4">
             <div class="numbers-section__card">
@@ -680,39 +680,39 @@
           </div>
           <div class="col-lg-4 mb-4">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">830 000</div>
-              <div class="numbers-section__card_content">Органический охват людей за время проведения кампании</div>
+              <div class="numbers-section__card_title">611</div>
+              <div class="numbers-section__card_content">Среднее количество репостов под каждой фото</div>
             </div>
           </div>
           <div class="col-lg-4 mb-4">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">830 000</div>
-              <div class="numbers-section__card_content">Органический охват людей за время проведения кампании</div>
+              <div class="numbers-section__card_title">74</div>
+              <div class="numbers-section__card_content">Некоммерческих поминания в СМИ</div>
             </div>
           </div>
           <div class="col-lg-4 mb-4">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">830 000</div>
-              <div class="numbers-section__card_content">Органический охват людей за время проведения кампании</div>
+              <div class="numbers-section__card_title">Каждая 3</div>
+              <div class="numbers-section__card_content">Девушка писала с желанием стать моделью Хадыжей</div>
             </div>
           </div>
           <div class="col-lg-4 mb-4">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">830 000</div>
-              <div class="numbers-section__card_content">Органический охват людей за время проведения кампании</div>
+              <div class="numbers-section__card_title">Кайф!</div>
+              <div class="numbers-section__card_content">Самый часты ответ на вопрос “Как вам пиво Хадыжи?”</div>
             </div>
           </div>
           <div class="col-lg-4 mb-4">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">830 000</div>
-              <div class="numbers-section__card_content">Органический охват людей за время проведения кампании</div>
+              <div class="numbers-section__card_title">9</div>
+              <div class="numbers-section__card_content">Человек учавствовало в разработке стратегии</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="container-fluid other-cases py-5 px-0 bg-grey">
+      <div class="container-fluid about-service__spacing other-cases mt-5 px-0 bg-grey">
         <div class="container">
-          <h2>Другие кейсы</h2>
+          <h2 class="other-cases__title">Другие кейсы</h2>
           <!-- Swiper -->
           <div class="swiper-container">
             <div class="swiper-wrapper">
