--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <main class="container-fluid p-0">
     <!-- First Layout -->
     <section class="container-fluid first-layout">
-      <div class="container">
+      <div class="container px-0 px-md-3">
         <div class="first-layout__title">
           <h1>Компания: <br> Галерея юридических услуг</h1>
         </div>
@@ -113,17 +113,17 @@
       </div>
       <div class="container-fluid about-service__spacing px-lg-5 about-service__gallery">
         <div class="row">
-          <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-5">
+          <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-3 mb-md-5">
             <div class="about-service__gallery_item">
               <a data-fancybox="gallery" href="img/gallery/legal/1.jpg"><img src="img/gallery/legal/1.jpg"></a>
             </div>
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-5">
+          <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-3 mb-md-5">
             <div class="about-service__gallery_item">
               <a data-fancybox="gallery" href="img/gallery/legal/2.jpg"><img src="img/gallery/legal/2.jpg"></a>
             </div>
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-5">
+          <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-3 mb-md-5">
             <div class="about-service__gallery_item">
               <a data-fancybox="gallery" href="img/gallery/legal/3.jpg"><img src="img/gallery/legal/3.jpg"></a>
             </div>
@@ -758,7 +758,7 @@
   </main>
   <!-- Footer -->
   <footer class="container-fluid footer">
-    <div class="container px-0">
+    <div class="container px-0 px-md-3">
       <div class="row">
         <div class="col-xl-6">
           <div class="row">
