--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
       </div>
       <div class="container about-service__spacing about-service__instagram-posts">
-        <div class="row" data-aos="fade-up" data-aos-delay="300">
+        <div class="row" data-aos="fade-up">
           <div class="col-xl-4">
             <h2 class="main-title main-title__big">посты</h2>
           </div>
