--- a/index.html
+++ b/index.html
@@ -241,12 +241,45 @@
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing">
-        <p>Сегодня в России 20 кодексов, каждый из которых регулярно обновляется. Законы ждут граждан на каждом углу, парковке, станции метро и автобусной остановке. Эта мысль побудила нас создать яркую креативную концепцию.</p>
-        <h2>Город Юристов - юридические услуги для всех и на каждом шагу</h2>
+      <div class="container about-service__spacing about-service__parallax">
+        <p class="about-service__parallax_text">Сегодня в России 20 кодексов, каждый из которых регулярно обновляется. Законы ждут граждан на каждом углу, парковке, станции метро и автобусной остановке. Эта мысль побудила нас создать яркую креативную концепцию.</p>
+        <h2 class="about-service__parallax_title">Город Юристов - юридические услуги для всех и на каждом шагу</h2>
       </div>
       <div class="container-fluid about-service__parallax px-0" data-aos="fade-up">
         <img src="img/images/parallax-1.jpg" alt="Изображения">
+      </div>
+      <div class="container about-service__spacing about-service__ecosystem">
+        <h2 class="main-title about-service__ecosystem_main-title uppercase mb-4 mb-lg-5">реализация: Экосистема</h2>
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+            <div class="about-service__ecosystem_block">
+              <h3 class="about-service__ecosystem_title"> инстаграм </h3>
+              <h4 class="about-service__ecosystem_subtitle"> Основная коммуникационная площадка. </h4>
+              <p class="about-service__ecosystem_text"> wow-контент, креативные механики, повышение узнаваемости бренда. Какую задачу решит? Формирование большой, активной аудитории, с хорошей лояльностью к бренду компании. Высокий трафик на сайт </p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+            <div class="about-service__ecosystem_block">
+              <h3 class="about-service__ecosystem_title"> фэйсбук </h3>
+              <h4 class="about-service__ecosystem_subtitle"> Второстепенная коммуникационная площадка (визитная карточка)  </h4>
+              <p class="about-service__ecosystem_text"> Какую задачу решит? Вирусность контента, больше бесплатного охвата, привлечение внимание второстепенной ЦА, продажи </p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+            <div class="about-service__ecosystem_block">
+              <h3 class="about-service__ecosystem_title"> вконтакте </h3>
+              <h4 class="about-service__ecosystem_subtitle"> Работа с аудиторией, которая хочет быть умнее всех. Делаем анонс распродаж, бонусов.  </h4>
+              <p class="about-service__ecosystem_text"> Какую задачу решит? Продажи, выявление потребностей, анализ поведенческих потребностей, более дешевый контакт с ЦА. </p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+            <div class="about-service__ecosystem_block">
+              <h3 class="about-service__ecosystem_title"> ютуб </h3>
+              <h4 class="about-service__ecosystem_subtitle"> Поддерживающий канал бренда  </h4>
+              <p class="about-service__ecosystem_text"> Какую задачу решит? Трафик на сайт, повышение узнаваемости бренда. Замыкающий элемент в трафикообразующей системе. </p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="container about-service__spacing numbers-section">
         <div class="row">
