--- a/index.html
+++ b/index.html
@@ -249,34 +249,75 @@
         <img src="img/images/parallax-1.jpg" alt="Изображения">
       </div>
       <div class="container about-service__spacing about-service__ecosystem">
-        <h2 class="main-title about-service__ecosystem_main-title uppercase mb-4 mb-lg-5">реализация: Экосистема</h2>
+        <h2 class="h2 about-service__ecosystem_main-title" data-aos="fade-up">реализация: Экосистема</h2>
         <div class="row">
-          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+          <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> инстаграм </h3>
               <h4 class="about-service__ecosystem_subtitle"> Основная коммуникационная площадка. </h4>
               <p class="about-service__ecosystem_text"> wow-контент, креативные механики, повышение узнаваемости бренда. Какую задачу решит? Формирование большой, активной аудитории, с хорошей лояльностью к бренду компании. Высокий трафик на сайт </p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+          <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> фэйсбук </h3>
               <h4 class="about-service__ecosystem_subtitle"> Второстепенная коммуникационная площадка (визитная карточка)  </h4>
               <p class="about-service__ecosystem_text"> Какую задачу решит? Вирусность контента, больше бесплатного охвата, привлечение внимание второстепенной ЦА, продажи </p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+          <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> вконтакте </h3>
               <h4 class="about-service__ecosystem_subtitle"> Работа с аудиторией, которая хочет быть умнее всех. Делаем анонс распродаж, бонусов.  </h4>
               <p class="about-service__ecosystem_text"> Какую задачу решит? Продажи, выявление потребностей, анализ поведенческих потребностей, более дешевый контакт с ЦА. </p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 mb-lg-5 mb-4">
+          <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> ютуб </h3>
               <h4 class="about-service__ecosystem_subtitle"> Поддерживающий канал бренда  </h4>
               <p class="about-service__ecosystem_text"> Какую задачу решит? Трафик на сайт, повышение узнаваемости бренда. Замыкающий элемент в трафикообразующей системе. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container about-service__spacing about-service__content">
+        <h2 class="h2 mb-lg-5 mb-4" data-aos="fade-up">КОНТЕНТ</h2>
+        <div class="row">
+          <div class="col-lg-11" data-aos="fade-up">
+            <p>Тренд этого года - изометрические иллюстрации, концепт который помог интересно и стильно отразить ценности бренда и его основные смыслы. </p>
+            <p>Кроме того, изометрия была частью айдентики бренда клиента, что в общем отображении всех маркетинговых ресурсов компании давало единый стиль.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
+            <div class="about-service__content_item">
+              <img src="img/gallery/legal-instagram/1.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
+            <div class="about-service__content_item">
+              <img src="img/gallery/legal-instagram/2.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
+            <div class="about-service__content_item">
+              <img src="img/gallery/legal-instagram/3.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
+            <div class="about-service__content_item">
+              <img src="img/gallery/legal-instagram/4.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
+            <div class="about-service__content_item">
+              <img src="img/gallery/legal-instagram/5.jpg" alt="Изображения">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
+            <div class="about-service__content_item">
+              <img src="img/gallery/legal-instagram/6.jpg" alt="Изображения">
             </div>
           </div>
         </div>
