--- a/index.html
+++ b/index.html
@@ -347,6 +347,13 @@
             </div>
           </div>
           <h2 class="h2" data-aos="fade-up">Пример теста</h2>
+          <div class="about-service__tools_test">
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test-1.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test2.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test3.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test4.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test5.jpg" alt="Изображения"></div>
+          </div>
         </div>
       </div>
       <!-- Numbers Section -->
@@ -398,40 +405,40 @@
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="other-cases__card">
+                <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-1.jpg" alt="Изображения">
                   </div>
                   <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="other-cases__card">
+                <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-2.jpg" alt="Изображения">
                   </div>
                   <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="other-cases__card">
+                <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-3.jpg" alt="Изображения">
                   </div>
                   <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="other-cases__card">
+                <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-1.jpg" alt="Изображения">
                   </div>
                   <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -469,7 +476,7 @@
                 <h3 class="footer__links_title">Контакты</h3>
                 <ul class="footer__links_list">
                   <li>
-                    <a href="#"><em>info@tvi.agency</em></a>
+                    <a href="#">info@tvi.agency</a>
                   </li>
                   <li>
                     <a href="#">+7 800 240 40 55</a>
